--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
       <section class="banner">
         <!-- Slogan del banner -->
-        <h3>Quienes Somos o no?</h3>
+        <h3>Quienes Son Ustedes?</h3>
       </section>
     </header>
     <!-- Main (centro de la página, zona central) -->
