--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
     <!-- Main (centro de la página, zona central) -->
     <main>
       <!-- section y article (posibilidades dentro de main) -->
-      
+      <section class="compSuscribete">
+        <img src="" alt="" class="compSuscribete_icon">
+        <form action="" class="compSuscribete_formulario">
+          <input type="email" class="compSuscribete_formulario_email">
+          <button class="compSuscribete_formulario_boton"></button>
+        </form>
+        <h5 class="compSuscribete_condiciones"></h5>
+      </section>
+
+
+
     </main>
     <!-- Footer (final de la página, zona inferior) -->
     <footer>
